@@ -13,7 +13,6 @@ import re
 
 from six import iteritems
 from docutils import nodes, utils
-from docutils.parsers.rst import roles
 
 from sphinx import addnodes
 from sphinx.locale import _
@@ -35,11 +34,6 @@ generic_docroles = {
     'program': addnodes.literal_strong,  # XXX should be an x-ref
     'regexp': nodes.literal,
 }
-
-for rolename, nodeclass in iteritems(generic_docroles):
-    generic = roles.GenericRole(rolename, nodeclass)
-    role = roles.CustomRole(rolename, generic, {'classes': [rolename]})
-    roles.register_local_role(rolename, role)
 
 
 # -- generic cross-reference role ----------------------------------------------
@@ -344,5 +338,14 @@ specific_docroles = {
     'index': index_role,
 }
 
-for rolename, func in iteritems(specific_docroles):
-    roles.register_local_role(rolename, func)
+
+def setup(app):
+    from docutils.parsers.rst import roles
+
+    for rolename, nodeclass in iteritems(generic_docroles):
+        generic = roles.GenericRole(rolename, nodeclass)
+        role = roles.CustomRole(rolename, generic, {'classes': [rolename]})
+        roles.register_local_role(rolename, role)
+
+    for rolename, func in iteritems(specific_docroles):
+        roles.register_local_role(rolename, func)
